# Confessout

./: .gitignore  README.md  computerFinalProject.docx
backend/: pyproject.toml
backend/confessout/: __init__.py  data.db  helper.py  main.py  models.py  pyproject.toml
backend/confessout/tests/: test_confessout.py
frontend/: package.json
frontend/confessout/: index.html  package.json
frontend/confessout/src/: App.jsx
frontend/confessout/src/components/: Home.jsx  Profile.jsx  Signin.jsx  Signup.jsx
frontend/src/: App.jsx  data.js  main.jsx
frontend/src/components/: Auth.jsx  Confess.jsx  Home.jsx  Nav.jsx  Profile.jsx  Signin.jsx  Signup.jsx
