[tool.poetry]
name = "confessout"
version = "0.1.0"
description = ""
authors = ["devsargam <sargampoudel100@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
